navabar.module.css to solve container conflict + display flex (align navbar links)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,6 +164,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: purple;
 }
 
 .app-shell main {
